# cred

./: README.md  pyproject.toml
src/cred/: cli.py  config.py  errors.py  logging_utils.py  resolver.py
src/cred/providers/: __init__.py  base.py  one_password.py
